# Test_Automation_for_DQE_Frameworks_PyTest

./: .gitignore  Dockerfile  Jenkinsfile  README.md  conftest.py  pyproject.toml  pytest.ini
db/: __init__.py  connection.py  db.cfg  queries.py
output/: report.html
tests/: test_database_data.py
