[tool.poetry]
name = "pytestproject"
version = "0.1.0"
description = "DQE_PyTest_Test_Automation_Frameworks"
authors = ["Mykola Rudym <mykola_rudym@epam.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
pyodbc = "^5.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-html = "^4.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
